[package]
name = "hello-rust"
version = "0.1.0"
rust-version = "1.60.0"
edition = "2018"

[dependencies]
env_logger = "0.10.0"
launchdarkly-server-sdk = {git = "https://github.com/launchdarkly/rust-server-sdk-private", branch = "v1" }
tokio = { version = "1.15.0", features = ["rt", "macros"] }

[features]
