[package]
name = "hello-rust"
version = "0.1.0"
rust-version = "1.74.1"
edition = "2018"

[dependencies]
env_logger = "0.10.0"
launchdarkly-server-sdk = { version = "2.6.1", default-features = false }
hyper = { version = "0.14.19", features = ["client", "http1", "http2", "tcp"] }
tokio = { version = "1.15.0", features = ["rt", "macros"] }
tokio-rustls = "0.26.2"
rustls = "0.23.31"
rustls-native-certs = "0.8.1"

[features]
